# Household_Dashboard

./: .gitignore  Dockerfile.nginx  Makefile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  package-lock.json  prometheus.yml
.github/workflows/: deploy.yml
backend/: :memory  Dockerfile  Dockerfile.dev  Dockerfile.prod  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9803aa3cdf32_add_super_column.py  a007ea0f5b49_add_households.py  afe0f679f3a8_initial_database_setup.py  b72ee54fe1d7_initial_linux_migration.py  d0a1c6d103b5_initial_schema.py
backend/app/: init_db.py  main.py  models.py
backend/app/core/: database.py  security.py  utils.py
backend/app/crud/: admin.py  user.py
backend/app/models/: household.py  user.py
backend/app/routes/: admin.py  auth.py  households.py  users.py
backend/app/schemas/: household.py  household_schemas.py  schemas.py  shopping_item_schemas.py  user.py  user_schemas.py
backend/app/services/: household_service.py
backend/app/tests/: conftest.py  test_01_api.py  test_02_users.py  test_03_auth.py  test_04_admin.py  test_05_households.py  test_dummy.py  test_utils.py
backend/tests/: conftest.py  test_api.py  test_dummy.py
frontend/: .gitignore  Dockerfile.dev  Dockerfile.prod  index.html  package-lock.json  package.json  vite.config.ts
frontend/household_dashboard-frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  Dashboard.tsx  main.tsx
frontend/src/api/: adminService.ts  client.ts  userService.ts
frontend/src/components/: AdminDashboard.tsx  ChangePassword.tsx  ChangeUsername.tsx  Dashboard.tsx  Layout.tsx  Login.tsx  Modal.tsx  NavBar.tsx  ProtectedRoute.tsx  Register.tsx  Settings.tsx  adminDashboard.tsx  changePassword.tsx  login.tsx  register.tsx  settings.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/tests/: dummy.test.ts
