[project]
name = "backend"
version = "0.1.0"
description = "Backend for household dashboard app."
authors = [
    {name = "jsalevaara"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.137.1,<0.138.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false