[project]
name = "backend"
version = "0.1.0"
description = "Backend for household dashboard app."
authors = [
    {name = "jsalevaara"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.137.1,<0.138.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "prometheus-fastapi-instrumentator (>=8.0.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx2 (>=2.5.0,<3.0.0)",
    "ruff (>=0.15.20,<0.16.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]

line-length = 100

target-version = "py312"

extend-exclude = ["alembic"]

[tool.ruff.lint]

select = ["E", "F", "W", "I"]